--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- MainWindow.xaml -->
 <Window
     x:Class="FocusMate.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -7,13 +7,21 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="FocusMate">
-
-    <Window.SystemBackdrop>
-        <MicaBackdrop />
-    </Window.SystemBackdrop>
+    RequestedTheme="Dark">
 
     <Grid>
+        <NavigationView x:Name="NavView" 
+                       PaneDisplayMode="LeftCompact"
+                       IsBackButtonVisible="Collapsed"
+                       IsSettingsVisible="True"
+                       SelectionChanged="NavView_SelectionChanged">
+            <NavigationView.MenuItems>
+                <NavigationViewItem Content="Timer" Icon="Play" Tag="TimerPage" />
+                <NavigationViewItem Content="Analytics" Icon="Chart" Tag="AnalyticsPage" />
+                <NavigationViewItem Content="Tasks" Icon="Taskboard" Tag="TasksPage" />
+            </NavigationView.MenuItems>
 
+            <Frame x:Name="ContentFrame" Margin="24"/>
+        </NavigationView>
     </Grid>
 </Window>
