--- a/Views/TimerPage.xaml
+++ b/Views/TimerPage.xaml
@@ -1,14 +1,75 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- TimerPage.xaml -->
 <Page
     x:Class="FocusMate.Views.TimerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FocusMate.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="24">
+            <!-- Circular Progress Ring -->
+            <Grid Width="300" Height="300">
+                <Ellipse Stroke="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}" 
+                         StrokeThickness="12" />
+                <Ellipse Stroke="{ThemeResource SystemAccentColor}" 
+                         StrokeThickness="12" 
+                         StrokeDashArray="314.159" 
+                         StrokeDashCap="Round"
+                         RenderTransformOrigin="0.5,0.5">
+                    <Ellipse.RenderTransform>
+                        <RotateTransform Angle="-90" />
+                    </Ellipse.RenderTransform>
+                </Ellipse>
 
+                <TextBlock Text="{Binding RemainingTime}" 
+                           FontSize="48" 
+                           HorizontalAlignment="Center" 
+                           VerticalAlignment="Center"
+                           Foreground="{ThemeResource SystemBaseHighColor}" />
+            </Grid>
+
+            <!-- Session Info -->
+            <StackPanel Spacing="12" HorizontalAlignment="Center">
+                <TextBox Header="Session Label" 
+                         Text="{Binding SessionLabel, Mode=TwoWay}" 
+                         Width="300" />
+
+                <ComboBox Header="Category" 
+                          ItemsSource="{Binding Categories}" 
+                          SelectedItem="{Binding SelectedCategory, Mode=TwoWay}"
+                          Width="300" />
+            </StackPanel>
+
+            <!-- Controls -->
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="12">
+                <Button Content="Start" 
+                        Command="{Binding StartTimerCommand}" 
+                        IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}"
+                        Style="{ThemeResource AccentButtonStyle}" />
+
+                <Button Content="Pause" 
+                        Command="{Binding PauseTimerCommand}" 
+                        IsEnabled="{Binding IsRunning}" />
+
+                <Button Content="Reset" 
+                        Command="{Binding ResetTimerCommand}" />
+            </StackPanel>
+
+            <!-- Mode Selection -->
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="12">
+                <Button Content="Focus" 
+                        Command="{Binding SwitchToFocusModeCommand}" 
+                        Style="{ThemeResource AccentButtonStyle}" />
+
+                <Button Content="Short Break" 
+                        Command="{Binding SwitchToShortBreakCommand}" />
+
+                <Button Content="Long Break" 
+                        Command="{Binding SwitchToLongBreakCommand}" />
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Page>
